tests/e2e/object_int_index_invalid.error
Error: syntax error in story at line 2, column 1

2|    a[-2] = "b"
      ^^^^^^^^^^^

E0100: Can't assign `string` to `boolean`
